public/styles.css
* {
    box-sizing: border-box;
    padding: 0;
    font-family: 'Consolas', monospace;
    scroll-behavior: smooth;
    background: #0d0d0f;
    background: linear-gradient(to right, #232235, #23152f);
    background-size:cover ;
}
body{
    margin:0px;
    background-color: #2b1f3d
    overscroll-behavior-y: contain;
    overscroll-behavior-x: none;

} 

/* navbar */
.ghost_navbar{
    display:flex;
    position:sticky;
    align-items: center;
    justify-content: center;
    width: 100%;
    top:0;
    z-index: 12;
}
 
.navbar{
    display: flex;
    position: absolute;
    top: -100px;
    background: linear-gradient(to right, #232235, #23152f);
    justify-content: center;
    align-items: center;
    overflow: hidden;
    width: 100%;
    z-index: 9;
    box-shadow: 0px 1px 10px 0px;
    height: 80px;
    transition: 0.2s ease-in;
}

.navbar.isActive{
    top:100%;
    transition: 0.3s ease-out; 
}

.navbar_container{
    display: flex;
    background: transparent;
    justify-content: space-between;
    align-items: center;
    z-index: 9999;
    width: 100%;
}

.navbar_logo{
    display: flex;
    background: transparent;
    align-items: center;
    justify-content: center;
    color: #f1f1ff;
    text-decoration: none;
    font-size: 50px;
    padding: 20px;
    transition: 0.2s ease;
}

.navbar_menu{
    display: flex;
    flex-direction: row;
    margin-right: 10px;
    justify-content: flex-end;
    align-items: center;
    background: transparent;
    list-style-type: none;
}

.navbar_item{
    background: transparent;
    margin: 15px;
    cursor: pointer;

}

.navbar_link{
    display:inline-block;
    background: transparent;
    white-space: nowrap;
    word-spacing: -0.3ch;
    text-decoration: none;
    font-size: 24px;
    color: #73737d;
    transition: 0.5s ease;
}

.navbar_link:hover{
    color:#f0f0ff;
    transition: 0.5s ease;
}

.navbar_burger{
    display: none;
}


.hero {
    padding: 0px;
    margin:0px;
    top: 0;
    background: transparent;
}

.section_container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
    height: 90%;
    text-align: center;
    padding: 0px;
    background: transparent;
}

.heading {
    font-size: 130px;
    margin-bottom: 24px;
    background: #ffffff;
    background: -webkit-linear-gradient(to right,  #fcedff , #f1f1ff);
    background: linear-gradient(to right, #fcedff , #f1f1ff);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    margin-top: 20px;
}


#verification_heading{
    font-size: 50px;
}

.emoji{
    background: transparent;
    -webkit-background-clip: initial;
    -moz-background-clip: initial;
    -webkit-text-fill-color: initial;
    -moz-text-fill-color: initial;
    font-size: 100px;
}

.image {
    cursor: pointer;
    margin : 30px;
    border-radius: 6px;
    width: 300px;
    height: 300px;
    transition: all 0.5s ease;
}

.image:hover {
    width : calc(300px*1.05);
    height: calc(300px*1.05);
    border-radius: calc(6px*1.05);
    margin-top: calc(30px - (300px*0.05)/2);
    margin-bottom: calc(30px - (300px*0.05)/2);
    transition: all 0.5s ease;
}

.image.isActive{
    width: 0px;
    height: 0px;
    margin-top: calc(15px + 300px/2);
    margin-bottom:calc(15px + 300px/2);
    transition: all 0.4s ease-out;
}


.description {
    font-size: 20px;
    margin: 20px;
    background: #ffffff;
    background: -webkit-linear-gradient(to right, #ffffff, #f8dffd);
    background: linear-gradient(to right, #ffffff, #f8dffd);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.btn {
    border: none;
    text-decoration: none;
    cursor: pointer;
    background: #ff7301;
    background: -webkit-linear-gradient(to right, #ffffff, #ffffff,#ff7301);
    background: linear-gradient(to right, #ffffff, #ffffff, #ff7301);
    height: 35px;
    width: 120px;
    text-align: center;
    vertical-align: middle;
    border-radius: 5px;
    margin: 15px;
    transition: all 0.5s ease;
}

.docs_span{
    font-size: 200%;
    background: #000000;
    background: -webkit-linear-gradient(to right,#ff7301, #d8790b);
    background: linear-gradient(to right, #ff7301, #d8790b);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
}

.check_cont{
    display: none;
    width: 350px;
    height: 100px;
    align-items: center;
    background: transparent;
}
#checkthis{
    display: none;
    align-items: center;
    width: 100%;
    font-size: 40px;
    background: transparent;
}

#checkthis.isActive{ 
    display: flex;
    text-align: left;
    color: #f1f1ff;
    overflow: hidden;
    border-right: .15em solid rgb(255, 255, 255);
    white-space: nowrap;
    letter-spacing: .15rem;
    animation-delay: 2s;
    animation: typing2 3s steps(20, end), blink-caret 0.75s step-end infinite ;
    animation-fill-mode: forwards;
}

.img2asci_cont{
    background: transparent;
    width: 500px;
}

.img2ascii {
    display: none;
    width: 0;
    background: transparent;
    font-size: 4.6px;
    line-height: 130%;
}

.img2ascii.isActive {
    display: flex;
    max-width: 6000px;
    text-align: left;
    overflow: hidden;
    color: aliceblue;
    letter-spacing: .1em; /* Adjust as needed */
    animation: typing 4s steps(100, end);
    animation-delay: 5.5s;
    animation-fill-mode: forwards;
}

/* tryit form */

#tryit_heading{
    font-size: 60px;
    margin-top: 100px;
}
/* ... */

